--- a/sklearn.ipynb
+++ b/sklearn.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "sklearn.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -44,11 +45,11 @@
       "metadata": {
         "id": "DpvvEGl8odPr",
         "colab_type": "code",
+        "outputId": "cb6a13e6-30f1-4cf0-e816-3f7f831a4b37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cb6a13e6-30f1-4cf0-e816-3f7f831a4b37"
+        }
       },
       "source": [
         "breast_cancer = sklearn.datasets.load_breast_cancer()\n",
@@ -58,7 +59,7 @@
         "Y=breast_cancer.target\n",
         "type(X)\n"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,16 +80,16 @@
       "metadata": {
         "id": "uaTx-s1JsEXo",
         "colab_type": "code",
+        "outputId": "982bcfe9-eddf-4079-fe14-24a90b24fb97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "982bcfe9-eddf-4079-fe14-24a90b24fb97"
+        }
       },
       "source": [
         "breast_cancer.target_names"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,16 +110,16 @@
       "metadata": {
         "id": "rWGLx4l4qboj",
         "colab_type": "code",
+        "outputId": "8ec14653-64ab-4c81-ca3a-35669d5be7bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8ec14653-64ab-4c81-ca3a-35669d5be7bf"
+        }
       },
       "source": [
         "print(X.shape,Y.shape)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,16 +150,16 @@
       "metadata": {
         "id": "qTTytoN6ATxd",
         "colab_type": "code",
+        "outputId": "ee2d7c21-623c-4b94-aefc-eee6200ce3f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 351
-        },
-        "outputId": "ee2d7c21-623c-4b94-aefc-eee6200ce3f6"
+        }
       },
       "source": [
         "data.describe()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,16 +519,16 @@
       "metadata": {
         "id": "kr2TwkXeta3L",
         "colab_type": "code",
+        "outputId": "18402613-8196-442c-ee20-5617265c4236",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "18402613-8196-442c-ee20-5617265c4236"
+        }
       },
       "source": [
         "print(data['class'].value_counts())"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,16 +546,16 @@
       "metadata": {
         "id": "OvW__SADCafY",
         "colab_type": "code",
+        "outputId": "0bb842ad-c92b-4079-8ea9-bc9a9013a673",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "0bb842ad-c92b-4079-8ea9-bc9a9013a673"
+        }
       },
       "source": [
         "print(data.groupby('class').mean())"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,18 +639,18 @@
       "metadata": {
         "id": "dQlQz5wgFe41",
         "colab_type": "code",
+        "outputId": "07a2f369-302b-404b-8ae3-952832d3612b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 377
-        },
-        "outputId": "07a2f369-302b-404b-8ae3-952832d3612b"
+        }
       },
       "source": [
         "plt.plot(X_test.T,'*')\n",
         "plt.xticks(rotation='vertical')\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -670,11 +671,11 @@
       "metadata": {
         "id": "xwjX1svxF2P0",
         "colab_type": "code",
+        "outputId": "c2f5b2da-4621-4dda-d37e-d68afd8bcc4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "c2f5b2da-4621-4dda-d37e-d68afd8bcc4a"
+        }
       },
       "source": [
         "mean_binarized=X_train['mean area'].map(lambda x:  1 if x>1000  else 0)\n",
@@ -682,7 +683,7 @@
         "plt.plot(mean_binarized,'*')\n",
         "plt.show()"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -697,6 +698,310 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ll9g7OxrMb_u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_binarized_train=X_train.apply(pd.cut,bins=2,labels=[1,0])\n",
+        "plt.plot(X_binarized_train.T,'*')\n",
+        "plt.xticks(rotation='vertical')\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xuQ3tYoUOYyx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_binarized_test=X_test.apply(pd.cut,bins=2,labels=[1,0])\n",
+        "plt.plot(X_binarized_test.T,'*')\n",
+        "plt.xticks(rotation='vertical')\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yRmQGoDvP8Nk",
+        "colab_type": "code",
+        "outputId": "04efcf35-637b-41e4-9ed6-d4107e5a98e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(X_binarized_test)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.frame.DataFrame"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1cySRFczPl-p",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_binarized_test=X_binarized_test.values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "07pQXLChPlt7",
+        "colab_type": "code",
+        "outputId": "08dfe93e-5d54-45b9-9c26-72ff0a416560",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(X_binarized_test)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s7NVBE0IPlO_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_binarized_train=X_binarized_train.values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h5UDLRMhMHAo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Using above train and test data for MP neurons"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TgU_mFzPPkqQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from random import randint"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jQ5SmQV7MCE9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for b in range(X_binarized_train.shape[1]+1):\n",
+        "  Y_pred_train = []\n",
+        "  accurate_rows = 0\n",
+        "  \n",
+        "  for x,y in zip(X_binarized_train, Y_train):\n",
+        "    y_pred=(np.sum(x)>=b)\n",
+        "    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4DiE6zwjpkZU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f3d8f718-8e87-4362-8a26-ca3e4c392a05"
+      },
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "b=28\n",
+        "\n",
+        "Y_pred_test=[]\n",
+        "for x in X_binarized_test:\n",
+        "  y_pred=(np.sum(x)>=b)\n",
+        "  Y_pred_test.append(y_pred)\n",
+        "  \n",
+        "accuracy=accuracy_score(Y_pred_test,Y_test)\n",
+        "print(b,accuracy)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "28 0.7807017543859649\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G1Bq0jfMv7e4",
+        "colab_type": "text"
+      },
+      "source": [
+        "MP Neuron Class"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x3dRmDHev5tQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class MPNeuron:\n",
+        "  def __init__(self):\n",
+        "    self.b=None #single parameter\n",
+        "  def model(self,x): #inference summing the values and check with b\n",
+        "    return(sum(x)>=self.b)\n",
+        "  def predict(self, X):\n",
+        "    Y=[]\n",
+        "    for x in X:\n",
+        "      result=self.model(x)\n",
+        "      Y.append(result)\n",
+        "    return np.array(Y)\n",
+        "  \n",
+        "  def fit(self, X, Y):\n",
+        "    accuracy={}\n",
+        "    for b in range(X.shape[1]+1):\n",
+        "      self.b=b\n",
+        "      Y_pred=self.predict(X)\n",
+        "      accuracy[b]=accuracy_score(Y_pred,Y)\n",
+        "      \n",
+        "    best_b=max(accuracy, key=accuracy.get)\n",
+        "    \n",
+        "    self.b=best_b\n",
+        "    print('Optimal value is b', best_b)\n",
+        "    print('Highest accuracy is', accuracy[best_b])\n",
+        "    \n",
+        "    \n",
+        "    \n",
+        "    \n",
+        "  \n",
+        "    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nsbXBP_02DV0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "mp=MPNeuron()\n",
+        "mp.fit(X_binarized_train,Y_train)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7bR1NvwL2P3w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_test_pred=mp_neuron.predict(X_binarized_test)\n",
+        "accuracy_test=accuracy_score(Y_test_pred, Y_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oClZETQO2lkg",
+        "colab_type": "text"
+      },
+      "source": [
+        "MP Nueron Code in Nutshell\n",
+        "\n",
+        "*   Binarization\n",
+        "*   Models or inference\n",
+        "*   Predict Target\n",
+        "*   Fit fuction to get accuracy\n",
+        "*   Choose max, use proper dict format\n",
+        "*   Create objects for train and test data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1UGd1Tvk3q6z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
